# CodeRef

0000-HelloWorld/: CMakeLists.txt  main.cpp  run.sh
0001-CmdArgs/: CMakeLists.txt  main.cpp  run.sh
0002-OptArgs/: CMakeLists.txt  main.cpp  run.sh
0003-GTest/: CMakeLists.txt  build.sh  run.sh
0003-GTest/include/: optArgParse.hpp
0003-GTest/src/: main.cpp  optArgParse.cpp
0003-GTest/tests/: hello_test.cc
0004-String/: CMakeLists.txt  main.cpp  run.sh
0005-Logger-lib-Singleton/: CMakeLists.txt  build.sh  main.cpp  run.sh
0005-Logger-lib-Singleton/lib/: CMakeLists.txt
0005-Logger-lib-Singleton/lib/include/: logger.hpp
0005-Logger-lib-Singleton/lib/src/: logger.cpp
mlir-notes/: .gitignore  CMakeLists.txt  build.sh  init.sh  requirements.txt
mlir-notes/aio/: CMakeLists.txt
mlir-notes/aio/lib/Dialect/: CMakeLists.txt
mlir-notes/aio/lib/Dialect/Joy/: CMakeLists.txt  JoyDialect.cpp
mlir-notes/aio/source/: CMakeLists.txt  opt.cpp
mlir-notes/aio/tests/: CMakeLists.txt  lit.cfg.py
mlir-notes/aio/tests/flow-opt/: hello_world.mlir  hello_world_rt.mlir  only_hello_world_rt.mlir
mlir-notes/aio/tools/: CMakeLists.txt  opt.cpp
mlir-notes/s001-add-dialect/: CMakeLists.txt
mlir-notes/s001-add-dialect/include/Dialect/Joy/: JoyDialect.td  JoyOps.td
mlir-notes/s001-add-dialect/lib/Dialect/Joy/: CMakeLists.txt
mlir-notes/s002-add-to-opt/: CMakeLists.txt
mlir-notes/s002-add-to-opt/include/Dialect/Joy/: JoyOps.h  JoyOps.td
mlir-notes/s002-add-to-opt/lib/Dialect/Joy/: JoyDialect.cpp
mlir-notes/s002-add-to-opt/tools/: opt.cpp
mlir-notes/s003-add-test/include/Dialect/Joy/: JoyDialect.td
mlir-notes/s003-add-test/lib/Dialect/Joy/: JoyOps.cpp
mlir-notes/s003-add-test/tests/: lit.site.cfg.py.in
mlir-notes/s003-add-test/tools/: CMakeLists.txt
mlir-notes/s004-read-verify-format/tests/flow-opt/: CMakeLists.txt  hello_world.mlir
mlir-notes/s004-read-verify-format/tools/: CMakeLists.txt  opt.cpp
mlir-notes/s005-add-op/: CMakeLists.txt
mlir-notes/s005-add-op/include/Dialect/Joy/: CMakeLists.txt  (+1 more)
mlir-notes/s005-add-op/tests/flow-opt/: hello_world_op.mlir  sample-opt.mlir
mlir-notes/s005-add-op/tools/: CMakeLists.txt  opt.cpp
(+3 files in other folders)
